[package]
name = "mortigilo"
version = "0.1.0"
edition = "2021"
authors = ["Kirsten Laskoski <kirsten@lasko.ski>"]
license = "MIT"
repository = "https://github.com/tslnc04/mortigilo"
homepage = "https://github.com/tslnc04/mortigilo"
description = "Sidecar container to restart qbittorrent automatically"

[dependencies]
anyhow = "1.0.93"
axum = "0.7.7"
tokio = { version = "1.41.1", features = ["macros", "rt"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.qbit-rs]
version = "0.4.6"
default-features = false
features = ["rustls-tls"]

[dependencies.tracing-loki]
version = "0.2.5"
optional = true
default-features = false
features = ["compat-0-2-1", "rustls"]

[[bin]]
name = "mortigilo"
path = "src/main.rs"

[features]
default = ["loki"]
loki = ["dep:tracing-loki"]
